# hadr-starter

./: .gitignore  CLAUDE.md  PLAN.md  README.md  goal.md  implementation-notes.md  marketing.html  prd.html  pyproject.toml  quiz.html  system-view.html
.github/workflows/: monitor.yml  pages.yml  sitrep.yml
agent/: __init__.py  assess.py  daily.py  main.py  tools.py
data/: manifest.json
data/events/: gdacs-EQ-1474413.json  gdacs-EQ-1474434.json  gdacs-EQ-1474477.json  gdacs-EQ-1474479.json  gdacs-FL-1103210.json
docs/: PRD.md  SLICE-V1.md  SLICE-V2.md  SLICE-V3.md  SLICES.md  product-design.md
harness/: __init__.py  agent.py  cli.py  skills.py
schemas/: event.schema.json  manifest.schema.json
scripts/: README.md  deploy.py  health.py  render_canned_sitrep.py  render_dashboard.py  report_date.py  run.py  stub_pipeline.py
scripts/pipeline/: __init__.py  details.py  diff.py  fetch.py  gate.py  merge.py  normalise.py  rank.py  reliefweb.py  render.py  runner.py  store.py
skills/news-summary/: SKILL.md
tests/: conftest.py  test_assess.py  test_canned_sitrep.py  test_dashboard.py  test_deploy.py  test_diff.py  test_e2e.py  test_gate.py  test_harness.py  test_health.py  test_merge.py  test_normalise.py  test_pipeline.py  test_rank.py  test_reliefweb.py  test_render.py  test_report_date.py  test_sitrep_e2e.py  test_skills.py  test_store.py  test_supersession.py  test_time.py  test_web_search.py
tests/fixtures/: README.md  capture_fixtures.py  derive_mornings.py
tests/fixtures/assessment/: assessment.json
tests/fixtures/both-down/: README.md
(+16 files in other folders)
