[project]
name = "hadr-starter"
version = "0.1.0"
description = "HADR morning sitrep agent — deterministic pipeline (scripts/) plus replay fixtures"
requires-python = ">=3.11"
dependencies = [
    "anthropic>=0.116.0",
]

[dependency-groups]
dev = ["pytest>=8"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["scripts", "."]
