[project]
name = "hadr-starter"
version = "0.1.0"
description = "HADR morning sitrep agent — deterministic pipeline (scripts/) plus replay fixtures"
requires-python = ">=3.11"
dependencies = [
    "anthropic>=0.116.0",
    "httpx>=0.28.1",
]

[dependency-groups]
dev = ["pytest>=9.1.1"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["scripts", "."]
